# bsharp

./: .gitignore  .gitmodules  .replit  Cargo.toml  Completeness.md  Justfile  LICENSE  Parser_Completness.md  REFACTORING_ANALYSIS.md  analysis_review.md  analysis_structure_summary.md  book.toml  fix_duplicate_expression.sh  fix_remaining_imports.sh  parser_review.md  release.toml  remove_tests.sh  rustc-ice-2025-10-24T11_14_59-47413.txt  test_debug_cases.sh  test_input.cs
roslyn_testing/bsharp_compliance/: Cargo.toml
roslyn_testing/bsharp_compliance/src/: main.rs
roslyn_testing/bsharp_compliance/src/generator/: cli.rs  emitter.rs  kind_map.rs  mod.rs  model.rs  options.rs  pipeline.rs  roslyn_args.rs  scanner.rs  string_lexer.rs  structure_dsl.rs  structure_emitter.rs  writer.rs
roslyn_testing/bsharp_compliance/src/tests_writer/: codegen.rs  mod.rs  runner.rs  utility.rs
roslyn_testing/bsharp_compliance_testing/: Cargo.toml
roslyn_testing/bsharp_compliance_testing/src/: lib.rs
roslyn_testing/bsharp_compliance_testing/src/custom_asserts/: after_parse.rs  mod.rs  roslyn_asserts.rs  structure_assert.rs
src/bsharp_analysis/: Cargo.toml
src/bsharp_analysis/src/: context.rs  lib.rs  visitors.rs
src/bsharp_analysis/src/artifacts/: cfg.rs  dependencies.rs  external_il.rs  metrics.rs  mod.rs  symbols.rs
src/bsharp_analysis/src/diagnostics/: diagnostic.rs  diagnostic_category.rs  diagnostic_code.rs  diagnostic_collection.rs  diagnostic_related_information.rs  format.rs  mod.rs  parse.rs  severity.rs  source_location.rs
src/bsharp_analysis/src/framework/: config.rs  diagnostic_builder.rs  fqn.rs  lookup.rs  macros.rs  mod.rs  passes.rs  pipeline.rs  query.rs  registry.rs  rule.rs  rules.rs  session.rs  stmt_walk.rs  visit.rs  walker.rs
src/bsharp_analysis/src/metrics/: basic.rs  complexity.rs  core.rs  maintainability.rs  mod.rs  pass.rs  shared.rs  visitor.rs
src/bsharp_analysis/src/navigation/: traits.rs  with_context.rs
src/bsharp_analysis/src/passes/: control_flow.rs  dependencies.rs  indexing.rs  metrics.rs  mod.rs  pe_loader.rs  reporting.rs
src/bsharp_analysis/src/project/: mod.rs
src/bsharp_analysis/src/quality/: mod.rs
src/bsharp_analysis/src/report/: mod.rs
src/bsharp_analysis/src/rules/: control_flow_smells.rs  mod.rs  naming.rs  semantic.rs
src/bsharp_analysis/src/semantic/: access.rs  attributes.rs  binding.rs  extensions.rs  flow.rs  generics.rs  mod.rs  nullability.rs  overload.rs  symbols.rs  types.rs
src/bsharp_analysis/src/types/: analyzer.rs  definitions.rs
src/bsharp_analysis/src/workspace/: error.rs  loader.rs  mod.rs  model.rs  source_map.rs
src/bsharp_analysis/tests/: metrics_regression.rs
src/bsharp_cli/: Cargo.toml  main.rs
src/bsharp_cli/src/: cli.rs  errors.rs  main.rs
src/bsharp_cli/src/commands/: analyze.rs  format.rs  mod.rs  parse.rs  rules.rs  tree.rs
src/bsharp_cli/tests/: parse_cli.rs
src/bsharp_parser/: Cargo.toml
src/bsharp_parser/src/: bsharp.rs  declaration_helpers.rs  errors.rs  facade.rs  identifier_parser.rs  lib.rs  mod.rs  parse_mode.rs  span.rs  span_db_build.rs  span_ext.rs  statement_parser.rs  test_diagnostics.rs
src/bsharp_parser/src/expressions/: assignment_expression_parser.rs  await_expression_parser.rs  collection_expression_parser.rs  conditional_expression_parser.rs  deconstruction_expression_parser.rs  default_expression_parser.rs  lambda_expression_parser.rs  literal_parser.rs  logical_expression_parser.rs  mod.rs  nameof_expression_parser.rs  new_expression_parser.rs  null_coalescing_expression_parser.rs  paren_tuple_primary_parser.rs  pattern_parser.rs  postfix_expression_parser.rs  precedence.rs  primary_expression_parser.rs  query_expression_parser.rs  range_expression_parser.rs  ref_expression_parser.rs  sizeof_expression_parser.rs  stackalloc_expression_parser.rs  switch_expression_parser.rs  throw_expression_parser.rs  tuple_expression_parser.rs  typeof_expression_parser.rs  unary_expression_parser.rs
src/bsharp_parser/src/helpers/: brace_tracker.rs  directives.rs  mod.rs
src/bsharp_parser/src/keywords/: access_keywords.rs  accessor_keywords.rs  constraint_keywords.rs  contextual_misc_keywords.rs  global_keywords.rs  iteration_keywords.rs  mod.rs  modifier_keywords.rs  parameter_modifier_keywords.rs  pattern_keywords.rs  preprocessor_keywords.rs  selection_and_switch_keywords.rs
src/bsharp_parser/src/syntax/: comment_parser.rs  errors.rs  list_parser.rs  mod.rs  parser_helpers.rs  span.rs  test_helpers.rs
src/bsharp_parser/src/tokens/: arithmetic.rs  assignment.rs  bitwise.rs  conditional.rs  delimiters.rs  equality.rs  lambda.rs  logical.rs  member.rs  mod.rs  nullish.rs  pointer.rs  qualifiers.rs  quotes.rs  range.rs  relational.rs  separators.rs  shift.rs  sigils.rs  string.rs
src/bsharp_parser/src/traits/: mod.rs  parsable.rs
src/bsharp_parser/src/trivia/: comment_parser.rs  mod.rs  preprocessor_directive_parser.rs
src/bsharp_parser/src/types/: mod.rs  type_parser.rs
src/bsharp_parser/tests/: formatter_golden.rs  spans.rs
src/bsharp_syntax/: Cargo.toml
src/bsharp_syntax/src/: identifier.rs  keywords.rs  lib.rs  span.rs
src/bsharp_syntax/src/declarations/: attribute.rs  class_body_declaration.rs  class_declaration.rs  constructor_declaration.rs  constructor_initializer.rs  delegate_declaration.rs  destructor_declaration.rs  enum_declaration.rs  event_declaration.rs  extension_declaration.rs  field_declaration.rs  file_scoped_namespace_declaration.rs  global_attribute.rs  global_using_directive.rs  indexer_declaration.rs  interface_body_declaration.rs  interface_declaration.rs  local_variable_declaration.rs  member_declaration.rs  method_declaration.rs  mod.rs  modifier.rs  namespace_declaration.rs  operator_declaration.rs  property_declaration.rs  record_declaration.rs  struct_declaration.rs  type_declaration.rs  type_parameter_constraint.rs  using_directive.rs
src/bsharp_syntax/src/emitters/: emit_trait.rs  (+2 more)
src/bsharp_syntax_derive/: Cargo.toml
src/bsharp_syntax_derive/src/: lib.rs
src/bsharp_wasm/: Cargo.toml
src/bsharp_wasm/src/: lib.rs
(+1807 files in other folders)
