[workspace]
members = [
    "src/bsharp_parser",
    "src/bsharp_analysis",
    "src/bsharp_cli",
    "src/bsharp_syntax",
    "src/bsharp_syntax_derive",
    "src/bsharp_tests",
    "src/bsharp_il",
    "roslyn_testing/bsharp_compliance",
    "roslyn_testing/bsharp_compliance_testing"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Piotr Mikstacki", "Apokryf",  "BSharp Contributors"]
