[workspace]
members = [
    "src/bsharp_nom_supreme",
    "src/bsharp_parser",
    "src/bsharp_analysis",
    "src/bsharp_cli",
    "src/bsharp_syntax",
    "src/bsharp_syntax_derive",
    "src/bsharp_tests",
    "src/bsharp_il",
    "src/bsharp_wasm",
    "src/bsharp_diagnostics_macros",
    "roslyn_testing/bsharp_compliance",
    "roslyn_testing/bsharp_compliance_testing"
, "src/bsharp_vm", "src/bsharp_vm_ir"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MPL-2.0"
authors = ["Piotr Mikstacki", "Apokryf",  "BSharp Contributors"]

[patch.crates-io]
solp = { path = "src/vendor/solp" }
