[package]
name = "bsharp_compliance"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
anyhow = "1"
globset = "0.4"
pathdiff = "0.2"
bsharp_parser = { path = "../../src/bsharp_parser" }
