[package]
name = "bsharp_compliance_testing"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
	bsharp_parser = { path = "../../src/bsharp_parser", features = ["expose_parser_diagnostics"] }
	bsharp_syntax = { path = "../../src/bsharp_syntax" }
