[package]
name = "bsharp_analysis"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
globwalk = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
quick-xml = { version = "0.38.3", features = ["serialize"] }
solp = "0.18.0"
rayon = { version = "1.10", optional = true }
nom-supreme = "0.8.0"
bsharp_syntax = { package = "bsharp_syntax", path = "../bsharp_syntax" }
bsharp_parser = { package = "bsharp_parser", path = "../bsharp_parser" }
[features]
default = []
parallel_analysis = ["rayon"]

[dev-dependencies]
insta = { version = "1.39.0", features = ["json"] }
