[package]
name = "bsharp_analysis"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
globwalk = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
quick-xml = { version = "0.38.3", features = ["serialize"] }
solp = "0.18.0"
rayon = { version = "1.10", optional = true }
nom-supreme = { package = "bsharp_nom_supreme", path = "../bsharp_nom_supreme" }
bsharp_syntax = { path = "../bsharp_syntax" }
bsharp_parser = { path = "../bsharp_parser" }
bsharp_diagnostics_macros = { path = "../bsharp_diagnostics_macros" }
git2 = { version = "0.20.2", optional = true }
bsharp_il = { path = "../bsharp_il" }
[features]
default = []
parallel_analysis = ["rayon"]
dev_utils = []
git_churn = ["git2"]

[dev-dependencies]
