[package]
name = "bsharp_parser"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log = "0.4"
nom = "8.0.0"
nom-supreme = { path = "../../dependencies/nom_supreme" }
syntax = { package = "bsharp_syntax", path = "../bsharp_syntax" }
phf = { version = "0.13.1", features = ["macros"] }
nom_locate = "5.0.0"

[features]
parser_recovery_trace = []
expose_parser_diagnostics = []
