[package]
name = "bsharp_parser"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "C# parser for BSharp, produces a typed AST with rich error reporting"

[dependencies]
log = "0.4"
nom = "8.0.0"
nom-supreme = { package = "bsharp_nom_supreme", path = "../bsharp_nom_supreme" }
syntax = { package = "bsharp_syntax", path = "../bsharp_syntax" }
phf = { version = "0.13.1", features = ["macros"] }
nom_locate = "5.0.0"
miette = "5"

[features]
parser_recovery_trace = []
expose_parser_diagnostics = []
