[package]
name = "bsharp_syntax"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bsharp_syntax_derive = { path = "../bsharp_syntax_derive" }
serde_json = "1.0.132"
nom_locate = "5.0.0"
